vlib/v/parser/tests/c_struct_no_embed.vv
struct Foo {
	x int
}

struct C.Unknown {
	Foo
}